--- a/css/styles.css
+++ b/css/styles.css
@@ -4,14 +4,32 @@
   box-sizing: border-box;
 }
 
+html {
+  font-family: Helvetica, sans-serif;
+  font-size: 16px;
+}
+
 .menu-container {
   color: #fff;
   background-color: #5995da;
+  padding: 20px 0;
   display: flex;
   justify-content: center;
+
 }
 
 .menu {
   border: 1px solid #fff; /* For debugging */
   width: 900px;
+  display: flex;
+  justify-content: space-between;
+}
+
+.links {
+  display: flex;
+  justify-content: flex-end;
+}
+
+.login {
+  margin-left: 20px
 }
