--- a/css/styles.css
+++ b/css/styles.css
@@ -33,3 +33,18 @@ html {
 .login {
   margin-left: 20px
 }
+
+.header-container {
+  color: #5995da;
+  background-color: #d6e9fe;
+  display: flex;
+  justify-content: center;
+}
+
+.header {
+  width: 900px;
+  height: 300px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
